welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:16: error: value gauche is not a member of Unit
		avance() gauche() 
                         ^MethodsPicture:36: error: value gauche is not a member of Unit
					faireV3() gauche() 
                                                  ^MethodsPicture:38: error: value droite is not a member of Unit
						avance() } droite() }
                                                           ^