welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {


	def faireV(c:Color){ for( n <-1 to 4){ 
		avance()
		setCouleurBrosse(c) 
		marquersol() 
		avance() 
		gauche() 
		avance() 
		marquersol() 
		recule() 
		droite() 
		avance() 
		marquersol() 
		avance() gauche() 
		} 
		} 

		def  faireV4() { 
			faireV(Color.YELLOW)
			faireV(Color.RED)
			faireV(Color.BLUE)
			faireV(Color.GREEN)
		}
		def marquersol() {
			baisseBrosse() 
			leveBrosse } 
			def faireV3(){
				for( n <- 1 to 3 ){faireV4() 
				for ( n <- 1 to 5){avance()
				} 
				} 
				}
				for( n <-1 to 3){ 
					faireV3() gauche() 
					for ( n <- 1 to 5){ 
						avance() } droite() }
}
